[package]
name = "roaring-bloom-filter"
version = "0.2.0"
authors = ["oliverdding <oliverdding@outlook.com>"]
edition = "2021"
description = "bloom filter implementation in rust with roaring-bitmap"
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://github.com/oliverdding/roaring-bloom-filter-rs"
repository = "https://github.com/oliverdding/roaring-bloom-filter-rs"
keywords = ["bloom-filter", "algorithms", "roaring", "datastructure"]

[dependencies]
roaring = { version = "0.10.6" }
log = "0.4.14"
serde_derive = "1.0.215"
serde = { version = "1.0.215", features = ["derive"], optional = true }

[dev-dependencies]
env_logger = "0.9.0"

[features]
default = ["serde"]
serde = ["dep:serde", "roaring/serde"]
